[package]
name = "vision"
version = "0.1.0"
authors = ["Marc Haubenstock <marc.haubenstock@outlook.com>"]
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
openblas-src = {version = "*", features = ["static"]}
nalgebra = {version="*", features=["rand"], path="/home/marc/Workspace/Rust/nalgebra"}
nalgebra-lapack = {version ="*", default-features=false, features = ["netlib"], path="/home/marc/Workspace/Rust/nalgebra/nalgebra-lapack"}
nalgebra-sparse = {version ="*", path="/home/marc/Workspace/Rust/nalgebra/nalgebra-sparse"}
kiss3d = "*"
rand = {version = "*", features = ["small_rng"] }
rand_distr = "*"
optimization_engine = "*"
plotters = { version = "*", default_features = true}
color-eyre = "0.5"
serde = { version = "*", features = ["derive"] }
serde_yaml = "0.8"

[profile.release]
debug = 0
strip = "none"

[profile.dev]
debug = 2
strip = "debuginfo"

[[example]]
name = "orb_ba"
path = "examples/sfm/orb_ba.rs"

[[example]]
name = "orb_ba_features"
path = "examples/image_processing/orb_ba_features.rs"

[[example]]
name = "orb_pyramid_match"
path = "examples/image_processing/orb_pyramid_match.rs"

[[example]]
name = "orb_pyramid"
path = "examples/image_processing/orb_pyramid.rs"

[[example]]
name = "fast_descriptor"
path = "examples/image_processing/fast_descriptor.rs"

[[example]]
name = "epipolar_five_point"
path = "examples/image_processing/epipolar_five_point.rs"

[[example]]
name = "epipolar_eight_point"
path = "examples/image_processing/epipolar_eight_point.rs"

[[example]]
name = "pointcloud"
path = "examples/visualizing/pointcloud.rs"

[[example]]
name = "pointcloud_3dv"
path = "examples/visualizing/pointcloud_3dv.rs"

[[example]]
name = "ba_3dv"
path = "examples/sfm/ba_3dv.rs"

[[example]]
name = "olsen"
path = "examples/sfm/olsen.rs"




