[package]
name = "vision"
version = "0.1.0"
authors = ["Marc Haubenstock <marc.haubenstock@outlook.com>"]
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
openblas-src = {version = "*", features = ["static"]}
nalgebra = {version="*", features=["rand-no-std"]}
nalgebra-lapack = {version ="*"}
nalgebra-sparse = {version ="*"}
rand = {version = "*", features = ["small_rng"] }
rand_distr = "*"
optimization_engine = "*"
plotters = { version = "*", default_features = true}
color-eyre = "0.5"
serde = { version = "*", features = ["derive"] }
serde_yaml = "0.8"
num-traits = "*"
simba = "*"
num-complex = "*"
linear-ip = {git="https://github.com/geoeo/linear-ip"}


[dev-dependencies]
kiss3d = "*"

[profile.release]
debug = 0
strip = "none"

[profile.dev]
[profile.test]
[profile.bench]
debug = 2
strip = "debuginfo"


[[example]]
name = "orb_ba"
path = "examples/sfm/orb_ba.rs"

[[example]]
name = "orb_ba_features"
path = "examples/image_processing/orb_ba_features.rs"

[[example]]
name = "orb_pyramid_match"
path = "examples/image_processing/orb_pyramid_match.rs"

[[example]]
name = "orb_pyramid"
path = "examples/image_processing/orb_pyramid.rs"

[[example]]
name = "fast_descriptor"
path = "examples/image_processing/fast_descriptor.rs"

[[example]]
name = "epipolar_five_point"
path = "examples/image_processing/epipolar_five_point.rs"

[[example]]
name = "epipolar_eight_point"
path = "examples/image_processing/epipolar_eight_point.rs"

[[example]]
name = "blur"
path = "examples/image_processing/blur.rs"

[[example]]
name = "pointcloud"
path = "examples/visualizing/pointcloud.rs"

[[example]]
name = "ba_synthetic"
path = "examples/sfm/ba_synthetic.rs"

[[example]]
name = "olsson"
path = "examples/sfm/olsson.rs"

[[example]]
name = "io_matrix"
path = "examples/io/matrix.rs"




